Removed unuseful metal slot in task_item macro and might have fixed a weird layout bug in the process.
git-svn-id: https://svn.socialplanning.org/svn/TaskTracker/trunk@2172 40f73b84-6177-4a8e-8c61-7eee4b1974ed

--- a/tasktracker/public/stylesheets/list.css
+++ b/tasktracker/public/stylesheets/list.css
@@ -48,7 +48,7 @@ table.task_list {
 }
 
 tr {
-
+   width: 100%;
 }
 
 .undroppable {
